# literature-review-agent

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
docs/: ARCHITECTURE.md
examples/: sample_papers.txt
src/literature_review_agent/: __init__.py  agent.py  gemini_client.py  prompts.py  query_planner.py  retriever.py  schemas.py  utils.py
