[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-review-agent"
version = "0.1.0"
description = "A staged Gemini-powered workflow for structured literature reviews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
